package revolve;
import "parameter.proto";

message NeuralConnection {
  required string src = 1;
  required string dst = 2;
  required float weight = 3;
}

message Neuron {
  required string id = 1;
  required string layer = 2;
  required string type = 3;
  optional string partId = 4;
  repeated Parameter param = 5;
}

message NeuralNetwork {
  repeated Neuron neuron = 1;
  repeated NeuralConnection connection = 2;
}